force-app/main/default/objects/NEPA_Slack_Config__mdt/NEPA_Slack_Config__mdt.object-meta.xml
<CustomObject>
    <description>Slack integration configuration for NEPA process notifications. Stores channel IDs and risk alert thresholds. One default record (NEPA_Slack_Config.Default) is expected. Update channel IDs post-deploy via Setup → Custom Metadata Types.</description>
    <label>NEPA Slack Config</label>
    <pluralLabel>NEPA Slack Configs</pluralLabel>
</CustomObject>