force-app/main/default/objects/NEPA_Slack_Config__mdt/fields/Default_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Channel_Id__c</fullName>
    <label>Default Channel ID</label>
    <type>Text</type>
    <length>50</length>
    <description>Slack channel ID (Cxxxxxxxxxx format) for general NEPA process stage notifications. Copy from Slack: right-click channel → View channel details → scroll to bottom.</description>
</CustomField>