force-app/main/default/objects/NEPA_Slack_Config__mdt/fields/Notify_Tribal_Channel__c.field-meta.xml
<CustomField>
    <fullName>Notify_Tribal_Channel__c</fullName>
    <label>Tribal Notification Channel ID</label>
    <type>Text</type>
    <length>50</length>
    <description>Slack channel ID for tribal consultation required alerts (routed by NEPA_EJTribal_Router). Falls back to Default_Channel_Id__c if blank. Must belong to the connected Slack workspace.</description>
</CustomField>