force-app/main/default/objects/NEPA_Slack_Config__mdt/fields/Risk_Alert_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Risk_Alert_Threshold__c</fullName>
    <label>Risk Alert Threshold</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Litigation risk score at or above which a Slack alert is sent to the default channel. Matches the nepa_risk_score__c scale (0–100). Default seed value: 70.</description>
</CustomField>